# model2vec

./: .gitignore  Dockerfile  buildspec.yml  pom.xml
native/: Cargo.toml
native/src/: chunker.rs  lib.rs
src/main/java/com/model2vec/: Chunker.java  Model2Vec.java  NativeLoader.java  SnapCfg.java
src/test/java/com/model2vec/: ChunkerTest.java  Model2VecTest.java
